# SyncFlow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  auth.config.ts  auth.ts  deployment-config.ts  middleware.ts  mkdocs.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/dashboard/recordings/: page.tsx
app/dashboard/settings/: page.tsx
app/dashboard/streams/: page.tsx
app/lib/: actions.ts  livekit.ts
app/login/: page.tsx
app/ui/: app-logo.tsx  create-room.tsx  elp-logo.tsx  list-rooms.tsx  login-form.tsx  no-permission.tsx  skeletons.tsx
app/ui/dashboard/: create-room.tsx  nav-links.tsx  room-actions.tsx  rooms-table.tsx  sidenav.tsx  summary-cards.tsx  user-actions.tsx
crates/: .dockerignore  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: apidoc.rs  helpers.rs  lib.rs  livekit_handlers.rs  login_handlers.rs  oauth_handlers.rs  ownership_middleware.rs  project_handlers.rs  rmq_handlers.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/livekit/: egress.rs  mod.rs  room.rs  room_listener.rs  token.rs
crates/application/src/mmla/: mmla_service.rs  mod.rs  user_actions.rs  utils.rs
crates/application/src/project/: mod.rs  project.rs  project_crud.rs  session.rs  session_crud.rs  session_listener.rs  session_service.rs
crates/application/src/project/devices/: device_crud.rs  device_service.rs  mod.rs
crates/application/src/rmq/: auth.rs  mod.rs  session_notifier.rs
crates/application/src/s3/: mod.rs  storage_service.rs
crates/application/src/users/: account_service.rs  mod.rs  secret.rs  signed_token.rs  tokens_manager.rs  user.rs
crates/application/src/users/oauth/: github.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  lib.rs
crates/client/: Cargo.toml  README.md
crates/client/examples/: README.md  devices.rs  example_client.rs  stream_video.rs
crates/client/src/: http_client.rs  lib.rs  livekit_client.rs  project_client.rs
crates/domain/: Cargo.toml
crates/domain/src/: models.rs  schema.rs  tests.rs
crates/infrastructure/: diesel.toml
crates/shared/: Cargo.toml
crates/shared/src/: claims.rs  constants.rs  deployment_config.rs  device_models.rs  lib.rs  livekit_models.rs  project_models.rs  response_models.rs  signed_token.rs  user_models.rs  utils.rs
dashboard/: .gitignore  auth.config.ts  auth.ts  biome.json  contentlayer.config.js  deployment-config.ts  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/: api-middleware.ts
dashboard/app/lib/: utils.ts  (+11 more)
dashboard/config/: development.json  index.ts  production.json
dashboard/data/: docs-sidebar.ts
dashboard/docker/: .gitignore  docker-compose.local.yaml  egress.yaml  livekit.yaml
dashboard/styles/: docs.css
dashboard/types/: api.ts  deployment-config-models.ts  mmla.ts  next-auth.d.ts  project.ts
docker/: Dockerfile.api  Dockerfile.next  README.md  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.minio.yaml  docker-compose.postgres.yaml  docker-compose.prod.yaml  docker-compose.rmq.yaml  egress.yaml  generate-prod-config  livekit.yaml  rabbitmq.local.conf
docker/rabbitmq/: rabbitmq.local.conf
docs/: index.md  introduction.md
examples/livekit-mmla-demo-client/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
examples/syncflow-demo-client/: package-lock.json  package.json
iot/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
iot/http_server/: Cargo.toml
iot/src/: types.ts
iot/src-tauri/: Cargo.toml  tauri.conf.json
prisma/: schema.prisma
scripts/: create-user.js
service/: .gitignore  Cargo.toml  README.md
service/api/: Cargo.toml
service/api/src/: apidoc.rs  auth_middleware.rs  lib.rs  livekit_handlers.rs  login_handlers.rs
service/apidoc/: Cargo.toml
service/apidoc/src/: lib.rs
service/application/: Cargo.toml
service/application/src/: lib.rs
service/application/src/livekit/: egress.rs  mod.rs  room.rs  text_egress.rs  token.rs
service/application/src/mmla/: mmla_service.rs  mod.rs  user_actions.rs  utils.rs
service/application/src/users/: account_service.rs  auth.rs  mod.rs  secret.rs  secrets.rs  signed_token.rs  token.rs  tokens_manager.rs  user.rs  user_action_service.rs  user_service.rs
service/cli/src/: auth.rs  lib.rs  livekit.rs  utils.rs
service/client/: Cargo.toml
service/client/src/: http_client.rs  lib.rs  livekit_client.rs  login_client.rs
service/docker/: Dockerfile  Dockerfile.migrations  README.md  docker-compose.postgres.yaml  docker-compose.prod.yaml  docker-compose.yaml  generate-prod-config
service/domain/: Cargo.toml
service/domain/src/: lib.rs  models.rs  schema.rs  tests.rs
service/infrastructure/: Cargo.toml  diesel.toml
service/infrastructure/migrations/2024-02-29-201806_create_users/: down.sql
service/infrastructure/migrations/2024-03-12-171243_create_user_actions/: down.sql
service/infrastructure/migrations/2024-03-19-230737_create_user_egress_actions/: up.sql
service/infrastructure/migrations/2024-03-20-154515_create_key_secret_pairs/: down.sql  up.sql
service/infrastructure/migrations/2024-03-21-133034_create_api_keys/: down.sql
service/infrastructure/src/: lib.rs
service/migrations/2024-02-26-201212_create_users/: up.sql
service/shared/: Cargo.toml
service/shared/src/: constants.rs  deployment_config.rs  lib.rs  livekit_models.rs  response_models.rs  user_models.rs  utils.rs
service/src/: lib.rs  main.rs  models.rs  utils.rs
service/src/auth/: mod.rs  models.rs
service/src/livekit/: room.rs  routes.rs  token.rs
service2/: Cargo.toml
service2/migrations/2024-02-26-201212_create_users/: down.sql
service2/src/: schema.rs  utils.rs
service2/src/livekit/: mod.rs
service2/src/repository/: user_repository.rs
types/: deployment-config-models.ts  next-auth.d.ts
(+188 files in other folders)
