[package]
name = "livekit-mmla-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-web = "4.5.1"
dotenv = "0.15.0"
env_logger = "0.11.2"
livekit-api = "0.3.0"
livekit-protocol = "0.3.0"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
