[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

shared = { path = "../shared" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
bcrypt = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4.21"
rand = "0.8.5"
aes-gcm = "0.10.3"
base64 = "0.22.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.118"
thiserror = "1.0.63"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
livekit-client = { package="livekit", version = "0.6.0", features = ["rustls-tls-native-roots"] }
livekit-api = "0.4.0"
livekit-protocol = "0.3.5"
livekit-runtime = { version = "0.3.0", features = ["tokio"] }
