[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
client = { path = "../client" }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
