[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
envious = "0.2.2"
livekit-api = {git="https://github.com/livekit/rust-sdks.git", package="livekit-api" }
livekit-protocol = {git="https://github.com/livekit/rust-sdks.git", package="livekit-protocol" }
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
