[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
envious = "0.2.2"
jsonwebtoken = "9.3.0"
livekit-api = "0.4.0"
livekit-protocol = "0.3.5"
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.65"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
