[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livekit-api = "0.3.2"
livekit-protocol = "0.3.2"
shared = { path = "../shared" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
bcrypt = "0.15.0"
diesel = "2.1.4"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
