[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livekit-api = "0.3.2"
livekit-protocol = "0.3.2"
shared = { path = "../shared" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
bcrypt = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4.21"
rand = "0.8.5"
aes-gcm = "0.10.3"
base64 = "0.22.0"
