[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
utoipa = "4.2.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
infrastructure = { path = "../infrastructure" }

