[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livekit-api = "0.3.2"
livekit-protocol = "0.3.2"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
