[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
livekit-api = "0.3.2"
livekit-protocol = "0.3.2"
log = "0.4.21"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
